[package]
name = "wrench"
version = "0.1.0"
authors = ["Reisen <reisen@morphism.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono          = "*"
gumdrop         = "0.7.0"
hmac            = "0.7.1"
http            = "0.2.0"
rust-argon2     = "0.6.0"
sequoia-openpgp = "0.14.0"
sha2            = "0.8.0"
url             = "2.1.0"
hex             = "*"
